# mcext

./: .gitignore  Cargo.toml  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml
.claude/skills/: mcc.md  mcext-debug.md
client/: package.json
client/src/: extension.ts
data/: basic.mc  new.mc
data/crossfile/: main.mc
snippets/: mcode.json
src/: lib.rs  main.rs  mcc_lock.rs  mcc_server.rs  mcclock.rs  mccsrv.rs  project.rs
src/common/: config.rs  legend.rs  mod.rs  position.rs
src/features/: comp.rs  completion.rs  diagnostics.rs  docsym.rs  fmt.rs  formatting.rs  goto_definition.rs  gotodef.rs  hover.rs  inhint.rs  inlay_hint.rs  mod.rs  references.rs  refs.rs  semantic_tokens.rs  semtok.rs  symbols.rs  usejump.rs
src/index/: mod.rs  snapshot.rs  worker.rs
src/rpc/: mod.rs
src/server/: mod.rs
src/state/: document.rs  mod.rs  scheduler.rs  tokens.rs
src/util/: mod.rs  use_check.rs  usechk.rs
syntaxes/: mcode.tmLanguage.json
tests/: crossfile.rs  crossfile_e2e.rs  diagnostics.rs  dotted_test.rs  integration.rs
tests/fixtures/: helper.mc  main.mc
