[package]
name = "mcodels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mcc dependency removed - all interactions via RPC
chumsky = "0.9.3"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
im-rc = "15.0.0"
oxc_index = "0.36.0"
anyhow = "1.0.93"
thiserror = "2.0.3"
rust-lapper = "1.1.0"

# tracing: structured logging + span support
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# RPC client for mcc server
reqwest = { version = "0.12", features = ["json"] }

# tokio-console: async debugging tool (dev dependency only)
[dev-dependencies]
console-subscriber = "0.4"

